--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ k<!doctype html>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Viga" rel="stylesheet">
 
-    <title>Banyu Media Digital</title>
+    <title>Rumah Murah Di Bogor</title>
   </head>
   <body>
 
@@ -20,16 +20,16 @@ k<!doctype html>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="http://banyumediadigital.com/">Banyu Media Digital</a>
+        <a class="navbar-brand" href="https://permatajamburesidence.com//">Rumah Murah Di Bogor</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="http://banyumediadigital.com/">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link active" href="https://permatajamburesidence.com/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="https://permatajamburesidence.com/">promo</a>
+            <a class="nav-item nav-link" href="https://permatajamburesidence.com/">type unit</a>
+            <a class="nav-item nav-link" href="https://permatajamburesidence.com/">fasilitas</a>
             <a class="nav-item nav-link btn btn-primary text-white tombol" href="#">Join Us</a>
           </div>
         </div>
@@ -40,38 +40,15 @@ k<!doctype html>
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Jasa Pembuatan  <span>website</span> <br>terbaik <span>dan </span>profesional</h1>
-        <a href="#" class="btn btn-info btn-lg tombol">View Our Work</a>
+        <h1 class="display-4">Rumah Murah Dan Asri Di Bogor  <span>website</span> <br>terbaik <span>dan </span>profesional</h1>
+        <a href="#" class="btn btn-info btn-lg tombol">Hubungi Kami</a>
       </div>
     </div>
     <!-- akhir Jumbotron -->
 
 
     <!-- container -->
-    <div class="container">
-
-      <!-- info panel -->
-      <div class="row justify-content-center">
-        <div class="col-10 info-panel">
-          <div class="row">
-            <div class="col-sm">
-              <img src="img/employee.png" alt="Employee" class="img-fluid float-left">
-              <h4>24 Hours</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="col-lg">
-              <img src="img/hires.png" alt="HiRes" class="img-fluid float-left">
-              <h4>High-Res</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="col-lg">
-              <img src="img/security.png" alt="Security" class="img-fluid float-left">
-              <h4>Security</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+   
       <!-- akhir info panel -->
 
 
@@ -82,8 +59,7 @@ k<!doctype html>
         </div>
         <div class="col-lg-5">
           <h2>You <span>Work</span> Like at <span>Home</span></h2>
-          <p>Bekerja dengan suasana hati yang lebih asik, menyenangkan
-            dan mempelajari hal baru setiap harinya.</p>
+          <p>Dapatkan pilihan terbaik rumah dijual di Bogor, Jawa Barat harga terjangkau bisa kpr cicilan ringan proses mudah dan cepat.</p>
           <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
       </div>
