--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ k<!doctype html>
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Rumah Murah Dan Asri Di Bogor  <span>website</span> <br>terbaik <span>dan </span>profesional</h1>
+        <h1 class="display-4">Rumah Murah Dan Asri Di Bogor  <span>RUMAH IMPIAN</span> <br>KELUARGA </span>ANDA</h1>
         <a href="#" class="btn btn-info btn-lg tombol">Hubungi Kami</a>
       </div>
     </div>
