--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ k<!doctype html>
           <img src="img/workingspace.png" alt="Working Space" class="img-fluid">
         </div>
         <div class="col-lg-5">
-          <h2>Rumah Murah <span>Asri DiBogor <span>Green Andara Residence </span></h2>
+          <h2>Rumah Murah <span>Asri DiBogor <span> <span>Green Andara Residence </span></h2>
           <p>Dapatkan pilihan terbaik rumah dijual di Bogor, Jawa Barat harga terjangkau bisa kpr cicilan ringan proses mudah dan cepat.</p>
           <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
